# Economy

./: .coafile  .gitignore  .travis.yml  Notes.TODO  README.md  default.doxygen
Economy/: Notes.TODO  consumers.cpp  consumers.h  economy_participants.cpp  economy_participants.h  producers.cpp  producers.h  world.cpp  world.h
Economy/Source/: main.cpp
Economy/Source/Participants/: consumers.cpp  consumers.h  producers.cpp  producers.h  traders.cpp  traders.h
Economy/Source/World/: catalogue.h  hub.cpp  hub.h  world.cpp  world.h
Source/: CMakeLists.txt  Economy_config.h  Economy_config.h.in  Makefile  main.cpp
Source/Participants/: CMakeLists.txt  EconomyParticipants.cpp  EconomyParticipants.h  Manufactur.cpp  Manufactur.h  Manufacture.cpp  Manufacture.h  MarketTrader.cpp  MarketTrader.h  MovingTrader.cpp  MovingTrader.h  Traders.cpp  Traders.h  consumers.cpp  consumers.h  producers.cpp  producers.h
Source/World/: CMakeLists.txt  IDGenerator.cpp  IDGenerator.h  Market.cpp  Market.h  MerchantGuild.cpp  MerchantGuild.h  Village.cpp  Village.h  World.cpp  World.h  WorldDataTypes.h  catalogue.h  market.cpp  market.h  ressources.h  village.cpp  village.h  world.cpp  world.h
